[gd_scene load_steps=8 format=3 uid="uid://cscnk1bc8v66d"]

[ext_resource type="Script" path="res://src/drain_area/drain_area.gd" id="1_trn6j"]
[ext_resource type="Script" path="res://src/player/damage_handler/damage_source.gd" id="2_sfbjo"]
[ext_resource type="Material" uid="uid://bbhp34kya5qm8" path="res://src/shaders/drain_area/drain_area.tres" id="3_gl06h"]
[ext_resource type="Texture2D" uid="uid://bs4bk3rh2y8ld" path="res://assets/drain_area.png" id="3_s6cxc"]

[sub_resource type="Resource" id="Resource_1qh2u"]
script = ExtResource("2_sfbjo")
damage_amount = 0
damage_type = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_hg12p"]
radius = 36.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0jot6"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true

[node name="DrainArea" type="Area2D"]
z_index = -1
collision_layer = 2
collision_mask = 14
script = ExtResource("1_trn6j")
damage_source = SubResource("Resource_1qh2u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hg12p")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0jot6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("3_gl06h")
texture = ExtResource("3_s6cxc")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
